--- a/SpeechMod/SpeechMod.csproj
+++ b/SpeechMod/SpeechMod.csproj
@@ -13,18 +13,18 @@
         <PathfinderWOTRData>$(LocalAppData)Low\Owlcat Games\Pathfinder Wrath Of The Righteous</PathfinderWOTRData>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\0Harmony.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\Newtonsoft.Json.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\Owlcat.Runtime.UniRx.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\UniRx.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\Unity.TextMeshPro.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\UnityEngine.CoreModule.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\UnityEngine.IMGUIModule.dll*" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\UnityEngine.UI.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\0Harmony.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Newtonsoft.Json.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Owlcat.Runtime.UniRx.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UniRx.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Unity.TextMeshPro.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.CoreModule.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.IMGUIModule.dll*" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.UI.dll*" Private="false" />
 
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\UnityModManager\UnityModManager.dll*" Publicize="true" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\Owlcat.Runtime.UI.dll*" Publicize="true" Private="false" />
-        <Reference Include="$(PathfinderWOTRInstallDir)\Wrath_Data\Managed\Assembly-CSharp.dll*" Publicize="true" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityModManager\UnityModManager.dll*" Publicize="true" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Owlcat.Runtime.UI.dll*" Publicize="true" Private="false" />
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Assembly-CSharp.dll*" Publicize="true" Private="false" />
     </ItemGroup>
     <ItemGroup>
         <None Include="Info.json" CopyToOutputDirectory="PreserveNewest" Link="%(Filename)%(Extension)" />
