--- a/SpeechMod/SpeechMod.csproj
+++ b/SpeechMod/SpeechMod.csproj
@@ -21,7 +21,7 @@
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.CoreModule.dll*" Private="false" />
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.IMGUIModule.dll*" Private="false" />
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.UI.dll*" Private="false" />
-
+        <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityEngine.AudioModule.dll*" Private="false" />
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\UnityModManager\UnityModManager.dll*" Publicize="true" Private="false" />
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Owlcat.Runtime.UI.dll*" Publicize="true" Private="false" />
         <Reference Include="\\Mac\Home\pathfinder_speechmod\Managed\Assembly-CSharp.dll*" Publicize="true" Private="false" />
